[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = "styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "wps-light"
version = "0.15.2"
description = "The strictest and most opinionated python linter ever (lighter fork)."

license = "MIT"

authors = [
  "Timothée Mazzucotelli <pawamoy@pm.me>"
]

readme = "README.md"

repository = "https://github.com/pawamoy/wps-light"
homepage = "https://github.com/pawamoy/wps-light"

packages = [
  { include = "wemake_python_styleguide" },
]

keywords = [
  "flake8",
  "flake8-plugin",
  "flake8-formatter",
  "linter",
  "wemake.services",
  "styleguide",
  "code quality",
  "pycqa"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Flake8",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.urls]
"Funding" = "https://opencollective.com/wemake-python-styleguide"

[tool.poetry.plugins."flake8.extension"]
WPS = "wemake_python_styleguide.checker:Checker"

[tool.poetry.plugins."flake8.report"]
wemake = "wemake_python_styleguide.formatter:WemakeFormatter"

[tool.poetry.dependencies]
python = "^3.6"

flake8 = "^3.7"
attrs = "*"
typing_extensions = "^3.6"
astor = "^0.8"
pygments = "^2.4"
importlib-metadata = {version = "*", python = "<3.8"}
flake8-polyfill = "^1.0.2"

[tool.poetry.dev-dependencies]
nitpick = "^0.25"
flake8-pytest-style = "^1.3"

pytest-cov = "^2.11"
coverage-conditional-plugin = "^0.3"
pytest-randomly = "^3.5"
pytest = "^6.2"
snapshottest = "^0.6"
hypothesis = "^6.8"
hypothesmith = "^0.1"

mypy = "^0.812"

docutils = "^0.16"
sphinx = "^3.5"
sphinx-autodoc-typehints = "^1.11"
sphinxcontrib-mermaid = "^0.6"
doc8 = "^0.8"
added-value = "^0.15"
tomlkit = "^0.7"

safety = "^1.10"
autopep8 = "^1.5"
import-linter = "^1.2"

ipdb = "^0.13"
ipython = "^7.16"
astboom = "^0.4"
tokelor = "^0.1"
astpath = "^0.9"
lxml = "^4.6"
m2r2 = "^0.2"
